deploy.yaml
# --- 2. Deployment ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timecommerce-ai
  labels:
    app: timecommerce-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timecommerce-ai
  template:
    metadata:
      labels:
        app: timecommerce-ai
    spec:
      containers:
        - name: timecommerce-ai
          image: tainguyen1501/py-social
          ports:
            - containerPort: 8000
---
# --- 3. Service ---
apiVersion: v1
kind: Service
metadata:
  name: timecommerce-ai-service
spec:
  selector:
    app: timecommerce-ai
  ports:
    - port: 8000
      targetPort: 8000

---
# --- 4. Ingress ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timecommerce-ai-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
    - host: ai.biz5s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timecommerce-ai-service
                port:
                  number: 8000
